# dotfiles-mcp

./: .envrc  README.md  pyproject.toml
examples/: claude_desktop_config.json
src/: main.py
