[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dotfiles-mcp"
version = "0.1.0"
description = "MCP server for dotfiles managed with bare git repository"
dependencies = [
    "mcp>=0.1.0",
]

[project.scripts]
dotfiles-mcp = "dotfiles_mcp.main:main"

[tool.setuptools.packages.find]
where = ["src"]
